# personal_finance_tracker

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/v1/: routes_users.py
app/core/: config.py  exception_handlers.py  exceptions.py  logging_config.py  security.py
app/db/: mongodb.py
app/models/: objectid_model.py  response_model.py  user_model.py
app/services/: user_service.py
app/util/: response_builder.py  validation.py
